# BatyaVZdanii

./: CMakeLists.txt  README.md  main.c  makefile
src/: main.c  ppm.c  ppm.h  sobel.c  sobel.h
src/shared/: log.c  log.h
tests/: engine.ppm  test.ppm  test_matrix.c  tests_ppm_sobel.c
